reset appservice publish profile

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url=shopping/main.xhtml"/>
-    <title>Redirect...</title>
+    <title>Redirect....</title>
 </head>
 <body>
 
